[tool.poetry]
name = "fast-mda-traceroute"
version = "0.1.13"
description = "An experimental multipath traceroute tool."
authors = ["Maxime Mouchet <maxime.mouchet@lip6.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dioptra-io/fast-mda-traceroute"

[tool.poetry.dependencies]
python = "^3.10"
diamond-miner = "^1.0.3"
more-itertools = "^8.12.0"
tabulate = "^0.8.9"
typer = "^0.4.0"
pycaracal = "^0.14.5"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6.0"
mypy = "^0.942"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
types-tabulate = "^0.8.5"

[tool.poetry.scripts]
fast-mda-traceroute = 'fast_mda_traceroute.cli:app'

[tool.mypy]
ignore_missing_imports = true
implicit_reexport = false
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:$",
    "if __name__ == \"__main__\":$",
    "pass$",
    "\\s\\.\\.\\.$",
    "raise NotImplementedError$"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
